# media-vault-pro

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  GLOSSARY.md  GOVERNANCE.md  Makefile  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  TESTING.md  config.json  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-merge.yml  ci.yml  tests.yml
data/: README.md
docs/: API.md  ARCHITECTURE.md  BRANCH_PROTECTION.md  CONFIGURATION.md  HEALTHCHECKS.md  QUICKSTART.md  SCHEMA.md  alerting-rules.yml  monitoring-dashboard.yml  troubleshooting.md
logs/: README.md
scripts/: README.md  debug_acoustid.py  debug_metadata.py  download_missing_covers.py  fix_cover_art.py  fix_fstring_logging.py  fix_track_ordering.py  fix_until_album.py  rerun_audio_metadata.py  rescan_failed_cds.py  rescan_metadata.py  setup.py  update_metadata.py
src/: __init__.py  app_state.py  config.py  constants.py  content_downloader.py  disc_monitor.py  main.py  metadata.py  ripper.py  utils.py  web_server.py
src/clients/: __init__.py  mediainfo_client.py  musicbrainz_client.py  tmdb_client.py
src/observability/: __init__.py  errors.py  logging.py  metrics.py  pii.py  tracing.py
src/repositories/: __init__.py  auth_repo.py  collection_repo.py  job_repo.py  media_repo.py  playback_repo.py  podcast_repo.py
src/routes/: __init__.py  collections_bp.py  content_bp.py  jobs_bp.py  media_bp.py  observability_bp.py  playback_bp.py  podcasts_bp.py  users_bp.py
src/services/: __init__.py  library_scanner.py  media_identifier.py
src/static/js/: app.js
src/templates/: index.html  login.html
src/workers/: __init__.py  content_worker.py  job_worker.py  podcast_checker.py  poster_sync.py
tests/: __init__.py  conftest.py  test_app_state.py  test_collections.py  test_config.py  test_content_downloader.py  test_content_downloader_extended.py  test_disc_monitor.py  test_file_naming.py  test_jobs_routes.py  test_library_scanner.py  test_main.py  test_media_identifier.py  test_media_routes.py  test_mediainfo_client.py  test_metadata.py  test_musicbrainz_client.py  test_observability.py  test_playback.py  test_podcast_repo.py  test_ripper.py  test_runtime_validation.py  test_tmdb_client.py  test_upload.py  test_users.py  test_utils_extended.py  test_web_server.py
